[package]
name = "charming2jni"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[dependencies]
charming = {version = "0.2.5",features = ["ssr"]}
jni = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
