[package]
name = "charming2jni"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[dependencies]
# 这里使用的是gitee的地址，但这个项目的更新是通过github进行然后再用gitee通过过来。这么做目的是直接用github拉取经常会失败
charming = { git = "https://gitee.com/ychuanl/charming-extend.git", branch = "main", features = ["ssr"] }
jni = "0.21.1"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
