[package]
name = "charming2jni"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[dependencies]
# charming针对原始的charming项目进行一些定制; git托管在 https://github.com/bajie-git/charming-extend
charming = { path = "lib/charming/charming", features = ["ssr"] }
jni = "0.21.1"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
